--- a/pages/introduction.mdx
+++ b/pages/introduction.mdx
@@ -1,11 +1,3 @@
-# Index Page of Introduction
+import Chapter from "../components/Chapter/Chapter";
 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
-
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+<Chapter chapterNumber={1} title={"Introduction"} subTitle = {"Sub Title"} />
