update report comtent

--- a/pages/temp.mdx
+++ b/pages/temp.mdx
@@ -1,13 +1,11 @@
-# Software Architecture Design
+# Index Page of Introduction
 
-## Objective
+Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+
+## What is Nextra?
 
 A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
 
-## Over about Software Architecture
+## Documentation
 
 The documentation is available at [https://nextra.site](https://nextra.site).
-
-## Architecture Detailing
-
-fdsfhusreyt7f
