implement explore section

--- a/pages/application/software-architecture/system.mdx
+++ b/pages/application/software-architecture/system.mdx
@@ -4,7 +4,7 @@
 
 A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
 
-## Over about Software Architecture
+## Overview about Software Architecture
 
 The documentation is available at [https://nextra.site](https://nextra.site).
 
