--- a/pages/application/software-architecture/system.mdx
+++ b/pages/application/software-architecture/system.mdx
@@ -28,6 +28,12 @@
   src="/assets/architecture_design/3layers.png"
   alt="Architecture layers"
   title="Architecture layers"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "50%",
+  }}
 />
 
 - **Presentation Layer:** Responsible for the user interface, providing an intuitive and user-friendly experience.
@@ -70,6 +76,12 @@ Manages API requests from clients and routes them to the corresponding services,
   src="/assets/architecture_design/mvc.png"
   alt="MVC Model"
   title="MVC Model"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "100%",
+  }}
 />
 
 A common approach in application development, applied to organize services effectively.
