fix image style

--- a/pages/overview/relevant-research/gen-image.mdx
+++ b/pages/overview/relevant-research/gen-image.mdx
@@ -1,3 +1,5 @@
+import SimplyCustomizedImage from "../../../components/CustomizedImages/SimplyCustomizedImage";
+
 # Image Generation Models
 
 ![Image Generation Models](../../../public/assets/chapter_2/2.6.jpg)
@@ -12,7 +14,18 @@ These models, trained on vast datasets, can produce entirely new images or modif
   product design, and entertainment.
 - **ArtBreeder & DeepArt:** blend and create new artistic images.
 
-![AI Generation Face](../../../public/assets/chapter_2/2.7.png)
+<img
+  src="/assets/chapter_2/2.7.png"
+  alt="AI Gen Image"
+  title="AI Gen Image"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "60%",
+  }}
+/>
 
 ### Applications
 
@@ -33,4 +46,15 @@ These models, trained on vast datasets, can produce entirely new images or modif
   organs, aiding precise diagnosis. A study demonstrated DALL-E 2's ability to generate realistic medical images like X-rays, CT, MRI,
   and ultrasound from brief descriptions.
 
-![The Frost](../../../public/assets/chapter_2/2.10.jpg)
+<img
+  src="/assets/chapter_2/2.10.jpg"
+  alt="The Frost"
+  title="The Frost"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "60%",
+  }}
+/>
