--- a/pages/explore/stabble-diffusion.mdx
+++ b/pages/explore/stabble-diffusion.mdx
@@ -4,13 +4,37 @@ Stable Diffusion (SD) is a deep learning model that uses latent diffusion to gen
 
 The development of Stable Diffusion represents a significant advancement in the field of Generative AI, providing creators, designers, and developers with a powerful tool for image generation tasks. Advanced users can also train their own models based on the Stable Diffusion framework, fine-tuning it for specific use cases.
 
-![latent-model](https://res.cloudinary.com/dgsrxvev1/image/upload/v1721832943/latent_diffusion_process_zkolb7.png)
+<img
+  src="https://res.cloudinary.com/dgsrxvev1/image/upload/v1721832943/latent_diffusion_process_zkolb7.png"
+  alt="latent-model"
+  title="latent-model"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "60%",
+  }}
+/>
 
 The Variational Autoencoder (VAE) in Stable Diffusion's architecture is used to learn the distribution of images within the training dataset. It works by encoding input images into a lower-dimensional latent space, capturing the essential features of the data, and then combining this with other techniques such as Generative Adversarial Networks (GANs) and autoregressive models to enhance data generation capabilities. The encoding process allows the model to create new images by sampling from the latent space, enabling it to learn how to reproduce the diversity and complexity of the input data. The effectiveness of VAE is crucial for generating high-quality and diverse images from textual descriptions.
 
 **Text Conditioning** involves embedding text descriptions into a format that the model can understand and use to guide the image generation process. This ensures that the generated images are not just random creations but are closely aligned with the themes, objects, and styles described in the input text.
 
 ![text-conditioning](https://res.cloudinary.com/dgsrxvev1/image/upload/v1721832936/text_encoder_noborder_tqps33.png)
+
+<img
+  src="https://res.cloudinary.com/dgsrxvev1/image/upload/v1721832936/text_encoder_noborder_tqps33.png"
+  alt="text-conditioning"
+  title="text-conditioning"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "60%",
+  }}
+/>
 
 Stable Diffusion extends beyond Text Conditioning by offering various other Conditioning types to enhance its image generation capabilities, including Super-Resolution, Inpainting, and Depth-to-Image. These additional Conditioning types broaden Stable Diffusion’s versatility and applications, catering to diverse needs ranging from creative art to scientific and technological uses.
 
