update section title

--- a/pages/conclusion/conclusion.mdx
+++ b/pages/conclusion/conclusion.mdx
@@ -17,7 +17,7 @@ The machine learning features implemented in our e-commerce platform have shown 
 Sellers can use the AI content generation feature by entering product hints and selecting **Gợi ý từ trợ lý AI**. The AI generates detailed
 descriptions from these hints.
 
-![AI Content Generation](../public/assets/chapter_5/5.1.png)
+![AI Content Generation](/assets/chapter_5/5.1.png)
 
 AI will create detailed product descriptions from keywords provided by sellers. Sellers can accept or reject the generated descriptions.
 
@@ -30,26 +30,26 @@ AI will create detailed product descriptions from keywords provided by sellers. 
 Sellers can generate product images with virtual models by uploading images, selecting product types, and choosing model criteria before
 clicking **Bắt đầu**. They can also create and add images to their shop's collection.
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.2.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.2.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.3.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.3.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.4.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.4.png)
 
 ### Virtual fitting room
 
 In the shopping process, customers can use the virtual fitting room feature to try products online. They simply upload their photo and
 select products from their cart.
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.5.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.5.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.6.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.6.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.7.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.7.png)
 
 The AI will automatically generate realistic and vivid images of the customer wearing the selected products.
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.8.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.8.png)
 
 - **Usability**: User-friendly interface, easy to use. Customers can easily upload photos and select products to try, providing a convenient experience.
 - **Accuracy**: High-resolution images with clear details, accurately reflecting how the product fits and displays color and style naturally.
@@ -61,11 +61,11 @@ The AI will automatically generate realistic and vivid images of the customer we
 Available on every page, users can interact with the AI chatbot located at the bottom right corner. Users can input requests such as product
 inquiries, statistical chart creation, or actions like adding products to the cart and searching for items.
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.9.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.9.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.10.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.10.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.11.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.11.png)
 
 Chatbot will process requests and respond immediately, providing information or performing actions as requested.
 
@@ -80,7 +80,7 @@ Chatbot will process requests and respond immediately, providing information or 
 
 On the product detail page, users can view summarized reviews based on all customer feedback.
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.12.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.12.png)
 
 AI will summarize all reviews and provide an overview, highlighting key points and presenting the product’s strengths and weaknesses.
 
@@ -97,21 +97,21 @@ The system handles simultaneous requests smoothly, providing a stable user exper
 components and harmonious colors. Shopping and checkout processes are simplified for quick transactions. Built with scalable microservices, the
 system easily integrates new features and customizations, offering a comprehensive, powerful, and flexible e-commerce platform.
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.13.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.13.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.14.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.14.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.15.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.15.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.16.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.16.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.17.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.17.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.18.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.18.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.19.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.19.png)
 
-![Virtual Model Image Generation](../public/assets/chapter_5/5.20.png)
+![Virtual Model Image Generation](/assets/chapter_5/5.20.png)
 
 - **User Flow:** The purchasing and checkout processes are streamlined, minimizing unnecessary steps to help users complete transactions quickly and conveniently.
 - **Scalability:** Built with a microservices architecture, the system is highly scalable, allowing easy integration of new features and customization based on specific requirements.
