--- a/pages/welcome.mdx
+++ b/pages/welcome.mdx
@@ -2,7 +2,12 @@
 
 import Title from "../components/Title/Title";
 
-<Title />
+<Title
+  title={"welcome to official vagoda document"}
+  subTitle={
+    "This page provides a comprehensive overview of Vagoda, covering its technologies, theories, research methods, and applications across the Vagoda platform. Explore the integration of Gen AI into E-commerce platforms specifically, as well as its applications across all fields of life in general."
+  }
+/>
 
 import { Card, Cards } from "nextra/components";
 
