--- a/pages/application/software-interface.mdx
+++ b/pages/application/software-interface.mdx
@@ -1,8 +1,10 @@
 import { Card, Cards } from "nextra/components";
 
-# UI/UX DESIGN
+#
 
-##
+import Title from "../../components/Title/Title";
+
+<Title title={"UI/UX Design"} subTitle={"abc"} />
 
 <Cards>
   <Card title="Overview about UI/UX Design" href="./software-interface/uiux" />
