--- a/pages/application/software-requirement.mdx
+++ b/pages/application/software-requirement.mdx
@@ -1,8 +1,10 @@
 import { Card, Cards } from "nextra/components";
 
-# SOFTWARE REQUIREMENT
+#
 
-##
+import Title from "../../components/Title/Title";
+
+<Title title={"Software Requirement"} subTitle={"abc"} />
 
 <Cards>
   <Card title="Objective" href="./software-requirement/objective" />
